--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==0.9.6
 certifi==2016.2.28
 click==6.7
 dominate==2.3.1
-Flask==0.12.2
+Flask ~> 0.12.3
 Flask-Bootstrap==3.3.7.1
 flask-heroku==0.1.9
 Flask-Migrate==2.1.1
